2003-05-25 Ales Hvezda   <ahvezda@geda.seul.org>

	* lightning_detector/: Added sch/pcb example by Terry Porter.

	* RF_Amp/: Added hierarchical spice example by Stuart Brorson

	* Makefile.am, configure.in: Added above directories

2003-05-22 Ales Hvezda   <ahvezda@geda.seul.org>

        * configure.in: Updated version

2003-02-20  Ales Hvezda (ahvezda@seul.org)

	* gTAG/commonrc: Changed how the current directory variable is
	set (used "'s instead of ').

2003-01-11  Ales Hvezda (ahvezda@seul.org)

	* Created configure.in and friends.  Added all files into cvs.

	* Added gTAG to examples.

	* The files contained in this directory will be the example files
	  for gEDA/gaf.