@@ -1,0 +1,10 @@
+
+SUBDIRS = sym
+
+EXTRA_DIST = Simulation.cmd TwoStageAmp.sch gnetlistrc gschemrc spice.netlist
+
+MOSTLYCLEANFILES = gschem.log *~
+CLEANFILES = gschem.log *~
+DISTCLEANFILES = *.log core FILE *~ prototype.bak
+MAINTAINERCLEANFILES = gschem.log *~ Makefile.in configure
+
