@@ -1,0 +1,5 @@
+.OP
+.AC DEC 20 1Hz 100MegHz
+* .DC Vinput 0 5 .01
+* .DC Vinput 1 2 .01
+
