@@ -1,0 +1,31 @@
+* Spice file generated by gnetlist
+* spice-SDB version by SDB -- provides advanced
+* spice netlisting capability.
+* Documentation at http://www.brorson.com/gEDA/SPICE/ 
+C2 2 Vbase2 2.2uF 
+R4 0 Vbase2 2.8K 
+R3 Vbase2 Vcc 28K 
+R8 Vcoll1 2 1 
+CE2 0 Vem2 1pF 
+RE2 0 Vem2 100 
+RC1 Vcoll1 Vcc 3.3K 
+Q2 VColl2 Vbase2 Vem2 2N3904 
+C1 1 Vbase1 2.2uF 
+.TEMP 0 25 100
+.INCLUDE /home/sdb/TwoStageAmp/Simulation.cmd
+.model 2N3904 NPN(IS=1E-14 VAF=100
++  Bf=300 IKF=0.4 XTB=1.5 BR=4
++  CJC=4E-12  CJE=8E-12 RB=20 RC=0.1 RE=0.1
++  TR=250E-9  TF=350E-12 ITF=1 VTF=2 XTF=3 Vceo=40 Icrating=200m mfg=Philips)
+VCC Vcc 0 DC 15V
+Vinput Vin 0 DC 1.6V AC 10MV SIN(0 1MV 1KHZ)
+CE1 0 Vem1 1pF 
+Cout VColl2 Vout 2.2uF 
+RL 0 Vout 100K 
+RC2 VColl2 Vcc 1K 
+RE1 0 Vem1 100 
+R2 0 Vbase1 2K 
+R1 Vbase1 Vcc 28K 
+R5 Vin 1 10 
+Q1 Vcoll1 Vbase1 Vem1 2N3904 
+.END
