@@ -1,0 +1,8 @@
+
+EXTRA_DIST = transistor.sym
+
+MOSTLYCLEANFILES = gschem.log *~
+CLEANFILES = gschem.log *~
+DISTCLEANFILES = *.log core FILE *~ prototype.bak
+MAINTAINERCLEANFILES = gschem.log *~ Makefile.in configure
+
