@@ -1,0 +1,36 @@
+v 20030223
+P 600 1000 600 800 1 0 0
+{
+T 500 850 5 6 1 1 0 0
+pinnumber=3
+T 500 850 5 6 0 0 0 0
+pinseq=1
+}
+P 600 200 600 0 1 0 1
+{
+T 500 50 5 6 1 1 0 0
+pinnumber=1
+T 500 50 5 6 0 0 0 0
+pinseq=3
+}
+V 500 501 316 3 0 0 0 -1 -1 0 -1 -1 -1 -1 -1
+T 900 700 5 10 0 0 0 0
+device=NPN_TRANSISTOR
+L 600 200 400 400 3 0 0 0 -1 -1
+L 600 800 400 600 3 0 0 0 -1 -1
+L 400 700 400 300 3 0 0 0 -1 -1
+P 0 500 184 500 1 0 0
+{
+T 100 550 5 6 1 1 0 0
+pinnumber=2
+T 100 550 5 6 0 0 0 0
+pinseq=2
+}
+L 400 500 184 500 3 0 0 0 -1 -1
+L 600 200 564 272 3 0 0 0 -1 -1
+L 600 200 528 236 3 0 0 0 -1 -1
+L 528 236 564 272 3 0 0 0 -1 -1
+T 900 500 8 10 1 1 0 0
+refdes=Q?
+T 900 300 9 10 1 0 0 0
+Generic_Transistor
