@@ -4,6 +4,8 @@
 
 	* RF_Amp/: Added hierarchical spice example by Stuart Brorson
 
+	* TwoStageAmp/: Added another spice example by Stuart Brorson
+
 	* Makefile.am, configure.in: Added above directories
 
 2003-05-22 Ales Hvezda   <ahvezda@geda.seul.org>
